# portifolio-dinamico

./: .gitignore  Makefile  README.md  deploy.sh  pyproject.toml
app/accounts/: admin.py  apps.py  backends.py  managers.py  models.py  views.py
app/accounts/migrations/: 0001_initial.py  0002_alter_user_access_group_alter_user_is_active_and_more.py
app/common/: choices.py  constants.py  fields.py  models.py  utils.py
app/contact_me/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/contact_me/migrations/: 0001_initial.py
app/contact_me/templates/: contact_me.html
app/historic/: admin.py  apps.py  manager.py  models.py  signals.py  views.py
app/historic/migrations/: 0001_initial.py  0002_alter_historic_description.py
app/projects/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
app/projects/migrations/: 0001_initial.py  0002_project_skills.py  0003_remove_project_skills_project_tags.py  0004_project_cover_project_thumbnail.py  0005_alter_project_cover_alter_project_thumbnail.py  (+2 more)
app/skills/: admin.py  apps.py  manager.py  signals.py
app/website/: admin.py  apps.py  managers.py  models.py  signals.py  urls.py  views.py
app/website_data/: admin.py  apps.py
config/: asgi.py  jazzadmin.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
nginx/: demo_portifolio.conf  my_portifolio.conf
static/css/: animation.css  style.css
static/js/: contact_me.js
statics/css/: style-timeline.css  style.css
statics/js/: projects.js  script.js
templates/: _skills.html  base.html  index.html  page.html
(+45 files in other folders)
